content placeholders for LocalCSS and LocalJS in master; moved local styles into individual pages to prevent layout breakage on unrelated pages; packaged up features on store as showable/hideable divs, triggered on hover of features link; overflow:auto on #content to force footer to bottom and assure page bg paints; misc style revisions

--- a/gooey-cms/gooeycms.webrole.ecommerce/css/pricing.css
+++ b/gooey-cms/gooeycms.webrole.ecommerce/css/pricing.css
@@ -1,5 +1,6 @@
 h2 {
 	color: #4395f1;
+	margin-top: 0;
 }
 
 
@@ -21,6 +22,7 @@ h2 {
 	color: #fff;
 	font-weight: normal;
 	margin-bottom: 20px;
+	margin-top: 15px;
 	font-size: 1.4em;
 	text-shadow: #173454 0 -0.01em 0.2em;
 }
